# ServeurProjetReseau

./: .clang-format  .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp
message/: CMakeLists.txt  message.proto
server/: CMakeLists.txt  broadcast.h  client.cpp  main.cpp  server.cpp  server.hpp  server_colin.c
server/broadcast/: CMakeLists.txt  broad.c  broad.h  broadcast.c  broadcast.h
src/: bluetooth.c  bluetooth.h  broadcast.c  broadcast.h  client.cpp  client.hpp  main.cpp  server.cpp  server.hpp
test/: .gitignore  Makefile  main.c
